SSCSCI-2525 DV option added UC Appeal Type