@@ -9,7 +9,7 @@ import static uk.gov.hmcts.reform.sscs.functional.handlers.BaseHandler.getJsonCa
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 import org.apache.http.HttpResponse;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.util.EntityUtils;
@@ -19,6 +19,7 @@ import org.apache.pdfbox.text.PDFTextStripper;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -41,8 +42,9 @@ public class GenDecisionNoticeFunctionalTest extends BaseFunctionTest {
     @Disabled //Ignore this test until we support additional benefit types
     public void nonDescriptorFlow_shouldGeneratePdfWithExpectedText(boolean allowed) throws IOException {
 
-        String json = getJsonCallbackForTestAndReplace("handlers/writefinaldecision/dlaScenarioCallbackNonDescriptorFlow.json", Arrays.asList("ALLOWED_OR_REFUSED"),
-            Arrays.asList(allowed ? "allowed" : "refused"));
+        String json = getJsonCallbackForTestAndReplace("handlers/writefinaldecision/dlaScenarioCallbackNonDescriptorFlow.json",
+            List.of("ALLOWED_OR_REFUSED"),
+            List.of(allowed ? "allowed" : "refused"));
 
         byte[] bytes = callPreviewFinalDecision(json);
         try (PDDocument document = Loader.loadPDF(bytes)) {
@@ -62,6 +64,50 @@ public class GenDecisionNoticeFunctionalTest extends BaseFunctionTest {
             assertThat(pdfTextWithoutNewLines, containsString(
                 "7. This has been a remote hearing in the form of a video hearing. Joe Bloggs attended and the Tribunal considered the appeal bundle to page B7. A Presenting Officer attended on behalf of the Respondent."));
             assertThat(pdfTextWithoutNewLines, not(containsString("8.")));
+        }
+    }
+
+    @ParameterizedTest
+    @CsvSource({"Yes", "No"})
+    public void shouldGenerateExpectedDecisionTextWithOtherPartiesIncluded(String isAppointeeOnCase) throws IOException {
+
+        String json = getJsonCallbackForTestAndReplace("handlers/writefinaldecision/writeFinalDecisionWithOtherParties.json",
+            List.of("IS_APPOINTEE_ON_CASE"),
+            List.of(isAppointeeOnCase));
+
+        byte[] bytes = callPreviewFinalDecision(json);
+        try (PDDocument document = Loader.loadPDF(bytes)) {
+            String pdfText = new PDFTextStripper().getText(document);
+            String pdfTextWithoutNewLines = replaceNewLines(pdfText);
+
+            assertThat(pdfTextWithoutNewLines, containsString("1. The appeal is allowed."));
+            assertThat(pdfTextWithoutNewLines, containsString("2. The decision made by the Secretary of State on 01/01/2026 is set aside."));
+            assertThat(pdfTextWithoutNewLines, containsString("3. Decision"));
+            assertThat(pdfTextWithoutNewLines, containsString("4. Reason"));
+
+            if ("Yes".equalsIgnoreCase(isAppointeeOnCase)) {
+                assertThat(pdfTextWithoutNewLines, containsString("5. This has been an oral (face to face) hearing. "
+                    + "The following people attended: John Smith the second respondent, "
+                    + "Jane Smith the third respondent and a representative from the First Tier Agency. "
+                    + "Mary Bloggs the appointee, David Jones the fourth respondent and Sarah Jones the fifth respondent did not attend. "));
+
+                assertThat(pdfTextWithoutNewLines, containsString("6. Having considered the appeal bundle to page B7 "
+                    + "and the requirements of rules 2 and 31 of The Tribunal Procedure (First-tier Tribunal)(Social Entitlement Chamber) "
+                    + "Rules 2008 the Tribunal is satisfied that reasonable steps were taken to notify Mary Bloggs of the hearing "
+                    + "and that it is in the interests of justice to proceed today. "
+                    + "Tribunal Judge: A User Date: 20/02/2026 Issued to the parties on: 20/02/2026 "));
+
+                assertThat(pdfTextWithoutNewLines, not(containsString("7.")));
+            } else {
+
+                assertThat(pdfTextWithoutNewLines, containsString("5. This has been an oral (face to face) hearing. "
+                    + "The following people attended: Joe Bloggs the appellant, John Smith the second respondent, "
+                    + "Jane Smith the third respondent and a representative from the First Tier Agency. "
+                    + "David Jones the fourth respondent and Sarah Jones the fifth respondent did not attend. "
+                    + "The Tribunal considered the appeal bundle to page B7."));
+
+                assertThat(pdfTextWithoutNewLines, not(containsString("6.")));
+            }
         }
     }
 
